--- a/themes/chunglab/layout/_partial/archive-post.ejs
+++ b/themes/chunglab/layout/_partial/archive-post.ejs
@@ -14,19 +14,27 @@
   <% } %>
     <%- partial('post/title', {class_name: 'archive-article-title'}) %>
     <ul class="blog-info">
-      <% if(post.journal) { %>
+      <% if (post.categories.some(e => e.name == 'Publication')) { %>
+        <% if(post.journal) { %>
         <li><i class="fa fa-book"></i> <%- post.journal || "Anonymous" %></li>
+        <% } %>
+        <li><i class="fa fa-user"></i> <%- post.author || theme.default_author || "Anonymous" %></li>
+        <% if(post.tags.length > 0) { %>
+        <li><i class="fa fa-tags"></i><%- partial('post/tag') %></li>
+        <% } %>
+      <% } else if (post.categories.some(e => e.name == 'Patent')) { %>
+        <li><i class="fa fa-book"></i> <%- post.number %></li>
+        <li><i class="fa fa-calendar"></i>
+          <%- partial('post/date', {class_name: 'archive-article-date', date_format: 'YYYY/MM/DD'}) %>
+        </li>
+        <li><i class="fa fa-user"></i> <%- post.author || theme.default_author || "Anonymous" %></li>
+      <% } else if (post.categories.some(e => e.name == 'Presentation')) { %>
+        <li><i class="fa fa-map-marker"></i> <%- post.venue %></li>
+        <li><i class="fa fa-user"></i> <%- post.author || theme.default_author || "Anonymous" %></li>
+        <li><i class="fa fa-calendar"></i>
+          <%- partial('post/date', {class_name: 'archive-article-date', date_format: 'YYYY/MM/DD'}) %>
+        </li>
       <% } %>
-      <li><i class="fa fa-user"></i> <%- post.author || theme.default_author || "Anonymous" %></li>
-      <% if(post.tags.length > 0) { %>
-      <li>
-	<i class="fa fa-tags"></i>
-	<%- partial('post/tag') %>
-      </li>
-      <% } %>
-    <% if(post.venue) { %>
-      <li><i class="fa fa-map-marker"></i> <%- post.venue %></li>
-    <% } %>
     </ul>
     <div class="blog-item">
       <% if (index == true){ %>
