people 페이지 레이아웃 변경 및 css 수정

--- a/themes/chunglab/source/css/theme-styles.styl
+++ b/themes/chunglab/source/css/theme-styles.styl
@@ -196,3 +196,23 @@ h4 {
   color: white !important;
   border: 1px solid #e94d1c !important;
 }
+
+.list-unstyled>li.col-md-3 {
+  min-height: 120px;
+}
+
+.list-unstyled>li.col-md-4 {
+  min-height: 200px;
+}
+
+.list-unstyled li h3 {
+  margin: 0 0 12px;
+  }
+
+.list-unstyled .thumbnail {
+  margin-bottom: 0
+}
+
+.content-page p {
+  margin-bottom: 0
+}
